# acki-nacki-to-eth-bridge-halo2-prover

./: .gitignore  Cargo.toml  PHASE1_TEST.md  README.md  SHELLNET_e2e_test.md  TECHNICAL_README.md  bk_set.json  bk_set.json.poseidon_dex_local.bak
bridge-event-halo2-prover/: Cargo.toml
bridge-event-halo2-prover/src/: main.rs
bridge-event-private-witness-export/: Cargo.toml
bridge-event-private-witness-export/src/: event_decode.rs  lib.rs  schema.rs
bridge-event-private-witness-export/tests/: golden_withdrawal.rs
bridge-event-prove-daemon/: Cargo.toml
bridge-event-prove-daemon/src/: main.rs
bridge-event-prover-lib/: Cargo.toml
bridge-event-prover-lib/src/: lib.rs  prover.rs  verifier.rs
bridge-event-prover-lib/tests/: event_prover.rs
bridge-event-witness/: Cargo.toml
bridge-event-witness-builder/: Cargo.toml
bridge-event-witness-builder/src/: main.rs
bridge-event-witness/src/: boc_walk.rs  lib.rs  schema.rs
bridge-event-witness/tests/: test_withdrawal.rs
bridge-prover-daemon/: Cargo.toml  README.md
bridge-prover-daemon/examples/: seed_pre_burst.rs
bridge-prover-daemon/src/: main.rs
bridge-prover-lib/: Cargo.toml
bridge-prover-lib/params/: layer_config_params.json  primary_config_params.json
bridge-prover-lib/src/: attestation_fetcher.rs  bk_set_fetcher.rs  block_data_parser.rs  block_id_tree.rs  boc_parser.rs  bootstrap.rs  bridge_state.rs  chain_proof_builder.rs  event_prover.rs  event_verifier.rs  gql_client.rs  ipc.rs  keys.rs  layer_prover.rs  layer_verifier.rs  lib.rs  poseidon.rs  poseidon_dense.rs  prover.rs  prover_bk_set.rs  real_chain_builder.rs  types.rs  verifier.rs
bridge-prover-lib/tests/: both_circuits_test.rs  diag_boc_parser.rs  event_prover.rs  gql_boc_diag.rs  live_10_blocks_test.rs  live_attestation_test.rs  live_primary_roundtrip.rs  live_proof_test.rs  shellnet_bk_set_test.rs  tree_reconstruction_test.rs  v3_attestation_fetch_test.rs
bridge-verifier-daemon/: Cargo.toml
bridge-verifier-daemon/src/: main.rs
docs/: bk_set_update_no_circuit3_plan.md  fallback_path.md
python/: generate_withdrawals_with_live_event_proving.py  generate_withdrawals_with_live_event_proving_shellnet.py  test_bridge_short_stub.py
python/contracts/: DepositVoucher.tvc  USDCBridge.keys.json  USDCBridge.shellnet.keys.json  USDCBridge.tvc
python/helper/: bridge_e2e.py  common.py
scripts/: extract_bk_set_from_docker.sh  run-bridge-test.sh  run_n14_prover_stack.sh  stop-bridge-test.sh
state/: verifier_state.json
