[package]
name = "bridge-event-private-witness-export"
version = "0.1.0"
edition = "2021"

# Exports the per-transaction private witness data Circuit 4 needs to prove a
# `WithdrawalInitiated` event from TokenBridge.sol. Produces a JSON file
# (schema_version-pinned) consumed by `bridge_event_prover_lib`.
#
# Modeled after dark_dex_halo2_private_witness_export_lib in concept, but
# implemented fresh against the current prover-repo dependencies. No halo2
# or circuit-crate dependency — schema is plain serde JSON so the daemon
# (Rust) and the Python orchestration driver can both consume it.

[lib]
name = "bridge_event_private_witness_export"
path = "src/lib.rs"

[[bin]]
name = "bridge-event-private-witness-export"
path = "src/bin/exporter.rs"

[dependencies]
tvm_block = { workspace = true }
tvm_types = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
