[package]
name = "bridge-prover-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bridge-prover"
path = "src/main.rs"

[dependencies]
bridge-prover-lib = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
