[package]
name = "bridge-prover-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bridge-prover-daemon"
path = "src/main.rs"

[dependencies]
bridge-prover-lib = { workspace = true }
gosh-dense-balanced-tree = { workspace = true }
bincode = { workspace = true }
tvm_block = { workspace = true }
halo2-base = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
