[package]
name = "bridge-prover-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2-base = { workspace = true }
halo2-ecc = { workspace = true }
attestation-bls-checker-circuit = { workspace = true }
historical-layer-hashes-movement-checker-circuit = { workspace = true }
bridge-parsers = { workspace = true }
bridge-poseidon = { workspace = true }
bridge-test-data-gen = { workspace = true }
bridge-event-prove-circuit = { workspace = true }
bridge-event-private-witness-export = { path = "../bridge-event-private-witness-export" }
gosh-bls-verification = { workspace = true }
gosh-dense-balanced-tree = { workspace = true }
gosh-sha256-chip = { workspace = true }
gosh-zk-snark-halo2-utils = { workspace = true }
pse-poseidon = { workspace = true }
num-bigint = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
tvm_vm = { workspace = true }
node-block-client = { workspace = true }
