[package]
name = "bridge-verifier-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bridge-verifier"
path = "src/main.rs"

[dependencies]
bridge-prover-lib = { workspace = true }
bridge-event-prover-lib = { workspace = true }
node-block-client = { workspace = true }
halo2-base = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
